# paint-in-rust

./: Cargo.toml  index.html
src/: canvas.rs  lib.rs
