[package]
name = "paint-in-rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
	"Window",
	"Document",
	"MouseEvent",
	"CanvasRenderingContext2d",
	"HtmlCanvasElement",
	"PointerEvent",
	"DomRect"
]
